# libalac

./: .gitignore  Makefile.am  README.md  configure.ac
codec/: Makefile.am  alac.pc.in
debian/: changelog  control  libalac-dev.install
